--- a/.prettierignore
+++ b/.prettierignore
@@ -3,17 +3,13 @@
 # dependencies
 /node_modules
 /.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
+.pnp.js
 
 # testing
 /coverage
 
 # next.js
+.next
 /.next/
 /out/
 
@@ -30,13 +26,23 @@ yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
-.env*
-!.env.example
+# local env files
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # vercel
 .vercel
 
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+# changelog
+CHANGELOG.md
+
+pnpm-lock.yaml
+
+# Other common ignores
+node_modules
+.next
+build
+dist
+ico
