--- a/package.json
+++ b/package.json
@@ -6,27 +6,55 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lint:fix": "eslint src --fix && pnpm format",
+    "lint:strict": "eslint --max-warnings=0 src",
+    "format": "prettier --write .",
+    "format:check": "prettier -c -w .",
+    "prepare": "husky",
+    "db:start": "docker compose up",
+    "db:push": "drizzle-kit push --force",
+    "db:migrate": "drizzle-kit migrate",
+    "db:studio": "drizzle-kit studio",
+    "db:seeds": "tsx ./src/db/seeds.ts"
+  },
+  "lint-staged": {
+    "**/*.{js,jsx,tsx,ts,css,less,scss,sass}": [
+      "prettier --write --no-error-on-unmatched-pattern"
+    ]
   },
   "dependencies": {
+    "@auth/drizzle-adapter": "^1.7.4",
+    "@paralleldrive/cuid2": "^2.2.2",
     "drizzle-orm": "^0.38.3",
     "next": "15.1.4",
     "next-auth": "^5.0.0-beta.25",
     "pg": "^8.13.1",
+    "postgres": "^3.4.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@eslint/js": "^9.18.0",
+    "@faker-js/faker": "^9.4.0",
     "@types/node": "^20",
     "@types/pg": "^8.11.10",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "drizzle-kit": "^0.30.1",
-    "eslint": "^9",
+    "eslint": "^9.18.0",
     "eslint-config-next": "15.1.4",
+    "eslint-plugin-react": "^7.37.4",
+    "globals": "^15.14.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.4.1",
     "postcss": "^8",
+    "prettier": "^3.4.2",
+    "prettier-plugin-tailwindcss": "^0.6.10",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "^5",
+    "typescript-eslint": "^8.20.0"
   }
 }
