--- a/package.json
+++ b/package.json
@@ -25,14 +25,35 @@
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^1.7.4",
+    "@hookform/resolvers": "^3.10.0",
     "@paralleldrive/cuid2": "^2.2.2",
+    "@radix-ui/react-avatar": "^1.1.2",
+    "@radix-ui/react-collapsible": "^1.1.2",
+    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-dropdown-menu": "^2.1.4",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-scroll-area": "^1.2.2",
+    "@radix-ui/react-separator": "^1.1.1",
+    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-tooltip": "^1.1.6",
+    "class-variance-authority": "^0.7.1",
     "drizzle-orm": "^0.38.3",
+    "lucide-react": "^0.473.0",
     "next": "15.1.4",
     "next-auth": "^5.0.0-beta.25",
+    "next-intl": "^3.26.3",
+    "next-themes": "^0.4.4",
+    "nextjs-toploader": "^3.7.15",
+    "nuqs": "^2.3.1",
     "pg": "^8.13.1",
     "postgres": "^3.4.5",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
+    "sonner": "^1.7.2",
+    "tailwind-merge": "^2.6.0",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -56,5 +77,9 @@
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5",
     "typescript-eslint": "^8.20.0"
+  },
+  "overrides": {
+    "@types/react": "^19",
+    "@types/react-dom": "^19"
   }
 }
