--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint:strict": "eslint --max-warnings=0 src",
     "format": "prettier --write .",
     "format:check": "prettier -c -w .",
+    "fix:all": "npm run lint:fix && npm run format",
     "prepare": "husky",
     "db:start": "docker compose up",
     "db:push": "drizzle-kit push --force",
@@ -25,6 +26,9 @@
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^1.7.4",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@hookform/resolvers": "^3.10.0",
     "@paralleldrive/cuid2": "^2.2.2",
     "@radix-ui/react-avatar": "^1.1.2",
@@ -53,7 +57,9 @@
     "react-hook-form": "^7.54.2",
     "sonner": "^1.7.2",
     "tailwind-merge": "^2.6.0",
-    "zod": "^3.24.1"
+    "uuid": "^11.0.5",
+    "zod": "^3.24.1",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
