feat(i18n): migrate to paraglide-next
- Replace next-intl with @inlang/paraglide-next
- Add inlang project configuration and settings
- Update routing and middleware for new i18n setup
- Move routes from [locale] to root level
- Add GitHub workflow for i18n linting
- Update imports to use new i18n utilities

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,6 @@
 {
-    "recommendations": [
-        "bradlc.vscode-tailwindcss"
-    ]
+  "recommendations": [
+    "bradlc.vscode-tailwindcss",
+    "inlang.vs-code-extension"
+  ]
 }
