--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@hookform/resolvers": "^3.10.0",
+    "@inlang/paraglide-next": "0.7.9",
     "@paralleldrive/cuid2": "^2.2.2",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-collapsible": "^1.1.2",
@@ -46,7 +47,6 @@
     "lucide-react": "^0.473.0",
     "next": "15.1.4",
     "next-auth": "^5.0.0-beta.25",
-    "next-intl": "^3.26.3",
     "next-themes": "^0.4.4",
     "nextjs-toploader": "^3.7.15",
     "nuqs": "^2.3.1",
@@ -65,6 +65,7 @@
     "@eslint/eslintrc": "^3",
     "@eslint/js": "^9.18.0",
     "@faker-js/faker": "^9.4.0",
+    "@inlang/paraglide-js": "1.11.8",
     "@types/node": "^20",
     "@types/pg": "^8.11.10",
     "@types/react": "^19",
