--- a/package.json
+++ b/package.json
@@ -32,9 +32,10 @@
     "@hookform/resolvers": "^3.10.0",
     "@inlang/paraglide-next": "0.7.9",
     "@paralleldrive/cuid2": "^2.2.2",
+    "@radix-ui/react-alert-dialog": "^1.1.5",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-collapsible": "^1.1.2",
-    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-dialog": "^1.1.5",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.1",
@@ -55,6 +56,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "server-only": "^0.0.1",
     "sonner": "^1.7.2",
     "tailwind-merge": "^2.6.0",
     "uuid": "^11.0.5",
